python/testData/quickFixes/PyAddImportQuickFixTest/importAbstractContainersFromCollectionsABC/main.py
my_collection: <error descr="Unresolved reference 'Sized'">Si<caret>zed</error> = list()
